# Movella

./: .coverage  .gitignore  Goalies2.xlsx  LICENSE  Percent_Games_won_by_Player.html  Percent_Games_won_by_team.html  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
src/Kaggle_Goalie_Data_Analytics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/goalie_analytics/: main.py
test_csvs/: Goalies empty rows.csv  Goalies missing columns.csv  Goalies missing key columns.csv
tests/: test_goalies.py
