[metadata]
name = Kaggle Goalie Data Analytics
description = Data Manipulation & Aggregation
author = Peter Drohan
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    goalie_analytics
install_requires =
    DateTime>=4.2
    numpy>=1.22.0
    openpyxl>=3.0.8
    pandas>=1.3.0
    pytest>=6.2.4
 
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

# [options.extras_require]
# testing =
#     pytest>=6.0
#     pytest-cov>=2.0
#     mypy>=0.910
#     flake8>=3.9
#     tox>=3.24

# [options.package_data]
# slapping = py.typed

# [flake8]
# max-line-length = 160